[tool.poetry]
name = "nutria"
version = "0.1.0"
description = ""
authors = ["Nicolás Eduardo Rondón Ortiz <nicolas.rondon@crehana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

